// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp should render Timestamp with a prefix 1`] = `
.c0 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #757575;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.8125em;
  }
}

<span
  className="c0"
>
  Updated 
  <time
    dateTime="1530947227000"
  >
    7 July 2018
  </time>
</span>
`;

exports[`Timestamp should render Timestamp with a suffix 1`] = `
.c0 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #757575;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.8125em;
  }
}

<span
  className="c0"
>
  <time
    dateTime="1530947227000"
  >
    7 July 2018
  </time>
  <span>
    Some custom markup
  </span>
</span>
`;

exports[`Timestamp should render Timestamp with datetime attribute and text 1`] = `
.c0 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #757575;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.8125em;
  }
}

<time
  className="c0"
>
  7 July 2018
</time>
`;
